# vake

./: .gitignore  Cargo.toml  LICENSE.md  README.md  plugin.lua  plugin.moon
src/: cli.rs  lib.rs  main.rs
src/parser/: check.rs  lex.rs  mod.rs  parse.rs  preprocess.rs
src/server/: close.rs  connection.rs  logger.rs  mod.rs  poll.rs  sync.rs
src/watch/: config.rs  mod.rs  serialize.rs
