[package]
name = "vake"
description = "Custom build tool for the In Silico project"
version = "1.0.1"
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.22.1"
clap = { version = "3.2.25", features = ["derive"] }
env_logger = "0.11.3"
httparse = "1.9.4"
log = "0.4.22"
notify = "6.1.1"
tokio = {version = "1.38.1", features = ["full"]}

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
